force-app/main/default/objects/First_Applicant_Change__c/First_Applicant_Change__c.object-meta.xml
<CustomObject>
    <label>First Applicant Change</label>
    <nameField>
        <displayFormat>FAC-{00000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>First Applicant Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>