force-app/main/default/objects/First_Applicant_Change__c/fields/New_First_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>New_First_Applicant_Name__c</fullName>
    <description>Name of the new first applicant.</description>
    <label>New First Applicant Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>