force-app/main/default/objects/First_Applicant_Change__c/fields/Old_First_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Old_First_Applicant__c</fullName>
    <description>Name of the applicant being replaced.</description>
    <label>Old First Applicant</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>