force-app/main/default/objects/First_Applicant_Change__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reason for the first applicant change.</description>
    <label>Reason</label>
    <length>32768</length>
    <required>true</required>
    <type>LongTextArea</type>
</CustomField>